--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         document.getElementById('lamp').addEventListener('click', function() {
             // 만약 램프가 켜져 있다면, 꺼진 상태로 전환
             if (isLampOn) {
-                document.body.style.backgroundColor = 'gray'; // 배경을 회색으로 변경
+                document.body.style.backgroundColor = 'black'; // 배경을 회색으로 변경
                 document.getElementById('lamp').src = 'lamp(2).png'; // 꺼진 램프 이미지로 변경
                 isLampOn = false; // 상태를 꺼짐으로 변경
             } else {
